Updated auth routes to add controller
